--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,5 @@ board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.3
+	madhephaestus/ESP32Servo@^1.1.1
+	ecal-mid/ESP32Servo360@^0.1.0
